--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -32,25 +32,38 @@ body {
   }
   &__grid {
     display: grid;
+    grid-template-areas:
+      "daniel daniel jonathan kira"
+      "jeanette patrick patrick kira";
+    column-gap: 30px;
+    row-gap: 24px;
+  }
+  &__student {
+    padding-top: 26px;
+    padding-bottom: 26px;
+    border-radius: 8px;
+    padding-inline: 32px;
   }
   &__daniel {
-    grid-column: 1 / 3;
-    grid-row: 1;
+    grid-area: daniel;
+    padding-bottom: 32px;
+    background-color: $moderately-violet-color;
   }
   &__jonathan {
-    grid-column: 4 / 5;
-    grid-row: 1;
+    grid-area: jonathan;
+    padding-bottom: 32px;
+    background-color: $very-dark-grayish-blue-color;
   }
   &__kira {
-    grid-column: 6 / 7;
-    grid-row: 1 / 2;
+    grid-area: kira;
+    background-color: $white-color;
   }
   &__jeanette {
-    grid-column: 1;
-    grid-row: 2;
+    grid-area: jeanette;
+    background-color: $white-color;
   }
   &__patrick {
-    grid-column: 2 / 4;
-    grid-row: 2;
+    grid-area: patrick;
+    background-color: $very-dark-blackish-blue-color;
   }
 }
