--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -30,35 +30,6 @@ body {
   &__title {
     display: none;
   }
-  &__name {
-    font-size: 13px;
-    font-weight: 500;
-    line-height: 100%;
-  }
-  &__verified {
-    margin-top: 4px;
-    font-size: 11px;
-    font-weight: 500;
-    line-height: 100%;
-  }
-  &__heading {
-    margin-top: 18px;
-    font-size: 20px;
-    font-weight: 600;
-  }
-  &__text {
-    margin-top: 24px;
-    font-weight: 500;
-    line-height: 138%;
-    font-size: 13px;
-    opacity: 0.7;
-    &--daniel {
-      margin-top: 16px;
-    }
-    &--jonathan {
-      margin-top: 16px;
-    }
-  }
   &__grid {
     display: grid;
     grid-template-areas:
@@ -66,16 +37,101 @@ body {
       "jeanette patrick patrick kira";
     column-gap: 30px;
     row-gap: 24px;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
-    max-width: 1110px;
-    max-height: 572px;
-    margin: auto;
+    grid-template-columns: repeat(4, 255px);
+    justify-content: center;
   }
   &__student {
     padding-top: 26px;
     padding-bottom: 26px;
     border-radius: 8px;
     padding-inline: 32px;
+    position: relative;
+  }
+  &__quotes {
+    position: absolute;
+    top: 0px;
+    right: 80px;
+    z-index: 0;
+  }
+  &__image {
+    width: 28px;
+    height: 28px;
+    border-radius: 100%;
+    position: relative;
+    z-index: 1;
+    &--daniel {
+      border: 2px solid #a775f1;
+    }
+    &--patrick {
+      border: 2px solid $moderately-violet-color;
+    }
+  }
+  &__name {
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 100%;
+    position: absolute;
+    top: 26px;
+    left: 77px;
+    color: $white-color;
+    &--jeanette {
+      color: $very-dark-grayish-blue-color;
+    }
+    &--kira {
+      color: $very-dark-grayish-blue-color;
+    }
+  }
+  &__verified {
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 100%;
+    opacity: 0.5;
+    position: absolute;
+    top: 43px;
+    left: 77px;
+    color: $white-color;
+    &--jeanette {
+      color: $very-dark-grayish-blue-color;
+    }
+    &--kira {
+      color: $very-dark-grayish-blue-color;
+    }
+  }
+  &__heading {
+    margin-top: 18px;
+    font-size: 20px;
+    font-weight: 600;
+    color: $white-color;
+    position: relative;
+    z-index: 1;
+    &--jeanette {
+      color: $very-dark-grayish-blue-color;
+    }
+    &--kira {
+      color: $very-dark-grayish-blue-color;
+    }
+    &--patrick {
+      color: $light-grayish-blue-color;
+    }
+  }
+  &__text {
+    margin-top: 24px;
+    font-weight: 500;
+    line-height: 138%;
+    font-size: 13px;
+    opacity: 0.7;
+    color: $very-dark-grayish-blue-color;
+    &--daniel {
+      margin-top: 16px;
+      color: $light-gray-color;
+    }
+    &--jonathan {
+      margin-top: 16px;
+      color: $white-color;
+    }
+    &--patrick {
+      color: $white-color;
+    }
   }
   &__daniel {
     grid-area: daniel;
@@ -111,31 +167,63 @@ body {
   }
 }
 
-// @media (min-width: 1440px) {
-//   .testimonials__grid {
-//     grid-template-columns: 540px minmax(255px, 1fr) minmax(255px, 1fr) minmax(
-//         255px,
-//         1fr
-//       );
-//     grid-template-rows: 282px minmax(266px, auto);
-//     column-gap: 30px;
-//     row-gap: 24px;
-//     // &__student {
-//     //   width: 255px;
-//     //   height: 282px;
-//     // }
-//     // &__daniel {
-//     //   width: 540px;
-//     // }
-//     // &__patrick {
-//     //   width: 540px;
-//     //   height: 266px;
-//     // }
-//     // &__kira {
-//     //   height: 572px;
-//     // }
-//     // &__jeanette {
-//     //   height: 266px;
-//     // }
-//   }
-// }
+@media (max-width: 1170px) {
+  body {
+    padding: 80px 20px;
+  }
+}
+
+@media (max-width: 1120px) {
+  body {
+    padding: 71px 24px;
+  }
+  .testimonials {
+    &__grid {
+      grid-template-areas:
+        "daniel"
+        "jonathan"
+        "jeanette"
+        "patrick"
+        "kira";
+      grid-template-columns: 1fr;
+      justify-items: center;
+    }
+    &__quotes {
+      right: 24px;
+    }
+    &__student {
+      width: 327px;
+    }
+    &__text {
+      &--daniel {
+        margin-top: 40px;
+        width: 247px;
+        height: 180px;
+      }
+      &--jeanette {
+        margin-top: 16px;
+      }
+      &--patrick {
+        margin-top: 16px;
+      }
+      &--kira {
+        margin-top: 16px;
+      }
+    }
+    &__daniel {
+      height: 444px;
+    }
+    &__jonathan {
+      height: 240px;
+    }
+    &__jeanette {
+      height: 222px;
+    }
+    &__patrick {
+      height: 384px;
+    }
+    &__kira {
+      height: 438px;
+    }
+  }
+}
